--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,6 @@
 @import-normalize; /* bring in normalize.css styles */
 
 body {
-  margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -10,6 +9,7 @@ body {
 }
 
 code {
+  align-items: center;
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
